--- a/src/app/components/perfilAdmin/navbar-perfil-admin/navbar-perfil-admin.component.html
+++ b/src/app/components/perfilAdmin/navbar-perfil-admin/navbar-perfil-admin.component.html
@@ -1,13 +1,26 @@
 <div class='navbar'>
-    <div class='logo-menu'>
-        <div class='contenedor'>
-            <img class='logo' src='./assets/PARALELO2.png'>
+    <!-- <div class='grid'> -->
+        <div class='left-column'>
+            <div class='logo-menu'>
+                <img class='logo' src='./assets/PARALELO2.png'>    
+            </div> 
+            <div class='options-menu'>
+                <div class='role-button'>
+                    <span><a [routerLink]="['/vista-admin-roles']" style="color: black; text-decoration: none;">ADMINISTRAR ROLES</a></span>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class='options-menu'>
-        <div class='role-button'>
-            <span><a [routerLink]="['/vista-admin-roles']" style="color: black; text-decoration: none;">ADMINISTRAR ROLES</a></span>
-        </div>
-    </div>
+        <!-- <div class='right-column'> -->
+            <!-- <div class='navbar-derecho'>
+                <app-navbar-derecho-admin></app-navbar-derecho-admin> -->
+            <!-- </div> -->
+        <!-- </div> -->
+       
+        
+
+    <!-- </div> -->
+    
+    
+    
 </div>
 
