--- a/src/app/components/perfilAdmin/search-bar-user/search-bar-user.component.html
+++ b/src/app/components/perfilAdmin/search-bar-user/search-bar-user.component.html
@@ -1,7 +1,7 @@
 <div class = "bar"> 
     <form class = 'search' [formGroup]="form">
         <div class='input'>
-            <input type="text" formControlName="correo" required><span class='bar'></span>
+            <input type="text" formControlName="correo" required>
             <span>INGRESA EL CORREO DEL USUARIO</span>
         </div>
         <button class='input-button' (click)='search()'>BUSCAR</button>
