--- a/src/app/pages/perfilAdmin/vista-admin-roles/vista-admin-roles.component.html
+++ b/src/app/pages/perfilAdmin/vista-admin-roles/vista-admin-roles.component.html
@@ -1,18 +1,18 @@
 <app-navbar-derecho-admin></app-navbar-derecho-admin>
 <app-navbar-perfil-admin></app-navbar-perfil-admin>
 
-<div class="wrapper">
+  <div class="wrapper">
   <div class="title-box">
-    <div class="title">
       <span>ADMINISTRAR ROLES</span>
-    </div>
   </div>
+  <div class="search-bar">
     <app-search-bar-user></app-search-bar-user>
-    <div class="identificador">
-      <label>SIN RESULTADOS</label>
-    </div>
-    
+  </div>
+  <div class="identificador">
+    <label>SIN RESULTADOS</label>
+  </div>   
       <app-form-admin-role></app-form-admin-role>
-
- 
 </div>
+
+
+
