--- a/src/app/components/perfilAdmin/navbar-derecho-admin/navbar-derecho-admin.component.scss
+++ b/src/app/components/perfilAdmin/navbar-derecho-admin/navbar-derecho-admin.component.scss
@@ -1,92 +1,115 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 
-.right-navbar{
-    float: right;
-    width: 25%;
-    height: 100%;
+// $small-phone: 320px;
+$phone: 520px;
+// $big-phone: 414px;
+// $small-tablet: 540px;
+$tablet: 768px;
+// $big-tablet: 1024px;
+// $small-laptop: 1256px;
+
+@media(max-width:$tablet){
+    .right-navbar{
+        display: none;
+
+    }  
+
 }
 
-.right-navbar .buttons{
-    width: 100%;
-    height: 24.8%;
-    background-color: rgb(255, 201, 51);
-    text-align: center;
-    font-family: 'Athiti', sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-    color: white;
-    padding-top: 10%;
-}
+// .right-navbar{
+//     height: 100%;
+// }
 
-.right-navbar .buttons .iniciar-sesion{
-    height: 20px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10%;
-}
+@media(min-width:$tablet){
+    .right-navbar{
+        float: right;
+        width: 25%;
+        height: 100%;
+    }
+    
+    .right-navbar .buttons{
+        width: 100%;
+        height: 24.8%;
+        background-color: rgb(255, 201, 51);
+        text-align: center;
+        font-family: 'Athiti', sans-serif;
+        font-size: 15px;
+        font-weight: bold;
+        color: white;
+        padding-top: 10%;
+    }
+    
+    .right-navbar .buttons .iniciar-sesion{
+        height: 20px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 10%;
+    }
+    
+    .right-navbar .iniciar-sesion .cuadro1{
+        background-color: rgb(73, 73, 73);
+        padding-top: 2px;
+        padding-bottom: 2px;
+        padding-left: 2px;
+        padding-right: 2px;
+        width: 50%;
+    }
+    
+    .right-navbar .buttons .registrase{
+        height: 20px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .right-navbar .buttons .registrase .cuadro2{
+        background-color: rgb(73, 73, 73);
+        padding-top: 2px;
+        padding-bottom: 2px;
+        padding-left: 2px;
+        padding-right: 2px;
+        width: 50%;
+    }
+    
+    .right-navbar .fotos{
+        width: 100%;
+        height: 70%;
+        background-color: rgb(255, 201, 51);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .right-navbar .fotos .foto1{
+        height: 40%;
+        width: 80%;
+        background-image: url(https://static.straitstimes.com.sg/s3fs-public/articles/2017/12/11/bp_car_111217_94.jpg);
+        background-size: 260px;
+        margin-bottom: 10px;
+        margin: auto;
+    }
+    
+    .right-navbar .fotos .foto2{
+        height: 40%;
+        width: 80%;
+        background-image: url(https://upload.wikimedia.org/wikipedia/commons/1/13/TE71_2T-GEU.jpg);
+        background-size: 260px;
+        margin: auto;
+    }
+    
+    .btn-logout{
+        margin-bottom: 200px;
+        background-color: rgb(73, 73, 73);
+        font-family: 'Athiti', sans-serif;
+        color: white;
+        border: none;
+        width: 50%;
+        padding-top: 2px;
+        padding-bottom: 2px;
+        padding-left: 2px;
+        padding-right: 2px;
+        margin-right: 17px;
+    }
 
-.right-navbar .iniciar-sesion .cuadro1{
-    background-color: rgb(73, 73, 73);
-    padding-top: 2px;
-    padding-bottom: 2px;
-    padding-left: 2px;
-    padding-right: 2px;
-    width: 50%;
-}
-
-.right-navbar .buttons .registrase{
-    height: 20px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.right-navbar .buttons .registrase .cuadro2{
-    background-color: rgb(73, 73, 73);
-    padding-top: 2px;
-    padding-bottom: 2px;
-    padding-left: 2px;
-    padding-right: 2px;
-    width: 50%;
-}
-
-.right-navbar .fotos{
-    width: 100%;
-    height: 70%;
-    background-color: rgb(255, 201, 51);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.right-navbar .fotos .foto1{
-    height: 40%;
-    width: 80%;
-    background-image: url(https://static.straitstimes.com.sg/s3fs-public/articles/2017/12/11/bp_car_111217_94.jpg);
-    background-size: 260px;
-    margin-bottom: 10px;
-    margin: auto;
-}
-
-.right-navbar .fotos .foto2{
-    height: 40%;
-    width: 80%;
-    background-image: url(https://upload.wikimedia.org/wikipedia/commons/1/13/TE71_2T-GEU.jpg);
-    background-size: 260px;
-    margin: auto;
-}
-
-.btn-logout{
-    margin-bottom: 200px;
-    background-color: rgb(73, 73, 73);
-    font-family: 'Athiti', sans-serif;
-    color: white;
-    border: none;
-    width: 50%;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    padding-left: 2px;
-    padding-right: 2px;
-    margin-right: 17px;
 }
