--- a/src/app/components/perfilAdmin/navbar-perfil-admin/navbar-perfil-admin.component.scss
+++ b/src/app/components/perfilAdmin/navbar-perfil-admin/navbar-perfil-admin.component.scss
@@ -1,29 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 
+// $small-phone: 320px;
+$phone: 540px;
+// $big-phone: 414px;
+// $small-tablet: 540px;
+$tablet: 768px;
+// $big-tablet: 1024px;
+// $laptop: 1256px;
+
+
 .navbar{
-    width: 75%;
+    width: 100%;
     height: 20%;
+    background-color: rgb(66, 66, 66);
 }
+
+.left-column{
+    width: 100%;
+}
+
 
 .navbar .logo-menu{
-    width: 100%;
-    height: 65%;
-    background-color: rgb(66, 66, 66);
-    padding-bottom: 10px;
-}
-
-.navbar .logo-menu .contenedor{
-    width: 35%;
-    height: 100%;
+    width: 60%;
+    height: 60%;
     padding-top: 10px;
     padding-left: 20px;
-    padding-right: 20px;
+    padding-bottom: 10px;
 }
 
 
 .navbar .options-menu{
     height: 30%;
-    width: 100%;
     display: flex;
     justify-content: center;
     font-family:'Athiti', sans-serif;
@@ -31,19 +38,22 @@
     font-weight: bold;
     background-color: rgb(66, 66, 66);
     padding-bottom: 10px;
+    @media(max-width: $phone){
+        font-size: 12px;
+    }
 }
 
-.navbar .options-menu .incio-button{
-    position: relative;
-    background-color: rgb(255, 201, 51);
-    height: 20px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    width: 40%;
-    display: flex;
-    justify-content: center;
-    margin-left: 20px;
-}
+// .navbar .options-menu .incio-button{
+//     position: relative;
+//     background-color: rgb(255, 201, 51);
+//     height: 20px;
+//     padding-top: 2px;
+//     padding-bottom: 2px;
+//     width: 40%;
+//     display: flex;
+//     justify-content: center;
+//     margin-left: 20px;
+// }
 
 .navbar .options-menu .role-button{
     position: relative;
@@ -55,6 +65,18 @@
     display: flex;
     justify-content: center;
     margin-right: 20px;
+    @media(max-width: $phone){
+        width: 50%;
+        padding-top: 0.5%;
+        padding-bottom: 0.5%;
+        font-size: 100%;
+        border-radius: 10px;
+    }
+    @media(max-width: $tablet){
+        border-radius: 5px;
+    }
+
 }
+
 
 
