--- a/src/app/components/perfilAdmin/search-bar-user/search-bar-user.component.scss
+++ b/src/app/components/perfilAdmin/search-bar-user/search-bar-user.component.scss
@@ -1,58 +1,79 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 
+$tablet: 768px;
+$phone: 375px;
+
 .bar{
     position: relative;
-    top: 5%;
-    height: 7%;
+    height: 100%;
+    margin-top: 0;
     cursor: pointer;
     border: 0px;
-}
-
-.bar .search{
-    height: 20%;
     width: 100%;
     display: flex;
-    margin-top: -20px;
 }
 
-.bar .input{
+.search{
+    position: relative;
+    height: 75%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.input{
     height: 65%;
-    width: 55%;
-    margin-left: 10px;
+    width: 65%;
     font-family: 'Athiti', sans-serif ;
     font-size: 13px; 
     font-weight: bold;
-    margin-top: 20px;
     color: white;
     border-radius: 36px 12px;
+    margin: 3%;
 }
 
 input{
-    width: 500px;
-    height: 10px;
+    width: 100%;
+    height: 50%;
     border-radius: 5px;                      
     font-size: 15px;            
-    margin: 10px 10px 10px 5px; 
-    padding: 10px 10px 10px 5px;
-    display: block;             
+    // margin: 10px 10px 10px 5px; 
+    // padding: 10px 10px 10px 5px;
+    display: flex;             
     border: none;
     border-radius: 36px 12px;
+    @media(max-width: $tablet){
+        // height: 100%;
+    }
 }
 
-.bar .input-button{
-    height: 30px;
-    width: 70px;
+.input-button{
+    position: relative;
+    height: 50%;
+    width: 10%;
     font-family: 'Athiti', sans-serif ;
     font-size: 15px; 
     font-weight: bold;
-    margin-top: 30px;
     background-color: white;
     border: none;
-    margin-left: 5px;
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    @media(max-width: $tablet){
+        font-size: 10px;
+    }
+    @media(max-width: $phone){
+        font-size: 8px;
+    }
 }
 
-label{
+span{
     font-family: 'Athiti', sans-serif ;
     font-size: 13px; 
     font-weight: bold;
+    @media(max-width: $phone){
+        font-size: 10px; 
+    }
 }
