--- a/src/app/pages/perfilAdmin/vista-admin-roles/vista-admin-roles.component.scss
+++ b/src/app/pages/perfilAdmin/vista-admin-roles/vista-admin-roles.component.scss
@@ -1,42 +1,69 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 
+// $small-phone: 320px;
+$phone: 375px;
+// $big-phone: 414px;
+// $small-tablet: 540px;
+$tablet: 768px;
+// $big-tablet: 1024px;
+// $small-laptop: 1256px;
+
+// body{
+//     // height: fit-content;
+// }
+
+
 .wrapper{
     height: 80%;
     width: 75%;
     background-color: rgb(66, 66, 66);
     justify-content: center;
     align-items: center;
+    @media(max-width:$tablet){
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .wrapper .title-box{
-    height: 5%;
+    height: 10%;
     display: flex;
     justify-content: center;
-}
-
-
-.wrapper .title-box .title{
     font-family: 'Athiti', sans-serif;
     font-size: 25px;
     color: rgb(255, 201, 51);
 }
 
-
-
-.identificador{
-    height: 30px;
-    margin-top: 100px;
-    margin-bottom: -77px;
-    width: 667px;
-    margin-left: 157px;
-    background-color: rgb(255, 201, 51);
+.search-bar{
+    height: 15%;
+    width: 100%;
 }
 
+.identificador{
+    display: flex;
+    position:relative;
+    height: 5%;
+    width: 40%;
+    margin-left: 30%;
+    background-color: rgb(255, 201, 51);
+    align-items: center;
+    justify-content: center;
+    @media(max-width:$tablet){
+        border-radius: 5px;
+    }
+    label{
+        display: flex;
+        font-family: 'Athiti', sans-serif;
+        color:black;
+        font-size: 20px;
+        justify-content: center;
+        align-items: center;
+        @media(max-width:$tablet){
+            font-size: 15px;
+        }
+        @media(max-width:$phone){
+            font-size: 10px;
+        }
 
-
-label{
-    font-family: 'Athiti', sans-serif;
-    color:black;
-    font-size: 25px;
-    margin-left: 30px;
+    }
 }
