--- a/src/app/pages/perfilAdmin/vista-datos-perfil-admin/vista-datos-perfil-admin.component.scss
+++ b/src/app/pages/perfilAdmin/vista-datos-perfil-admin/vista-datos-perfil-admin.component.scss
@@ -1,4 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
+
+$small-phone: 320px;
+$phone: 375px;
+$big-phone: 414px;
+$small-tablet: 540px;
+$tablet: 768px;
+$big-tablet: 1024px;
+$small-laptop: 1256px;
+
 .wrapper{
     height: 80%;
     width: 75%;
