--- a/src/app/components/perfilGerente/navbar-perfil-gerente/navbar-perfil-gerente.component.html
+++ b/src/app/components/perfilGerente/navbar-perfil-gerente/navbar-perfil-gerente.component.html
@@ -12,7 +12,7 @@
         <div class='about-button'>
             <span><a [routerLink]="['/reportes']" >REPORTES</a></span>
         </div>
-        <div class='about-button'>
+        <div class='about-button' id='cerrar-button'>
             <span><a [routerLink]="['/cerrar-ordenes']" >CERRAR ÓRDENES</a></span>
         </div>
     </div>
