--- a/src/app/pages/perfil-gerente/vista-maneja-citas/vista-maneja-citas.component.html
+++ b/src/app/pages/perfil-gerente/vista-maneja-citas/vista-maneja-citas.component.html
@@ -3,7 +3,7 @@
 
 <div class="wrapper">
   <div class="calendario">
-    <full-calendar [options]="calendarOptions"></full-calendar>
+    <full-calendar [options]="calendarOptions" class = "fullcalendar"></full-calendar>
   </div>
   
 </div>
