--- a/src/app/components/perfilGerente/navbar-perfil-gerente/navbar-perfil-gerente.component.scss
+++ b/src/app/components/perfilGerente/navbar-perfil-gerente/navbar-perfil-gerente.component.scss
@@ -1,35 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 
+$tablet: 768px;
+$phone: 540px;
+
+
 .navbar{
     width: 75%;
     height: 20%;
     background-color: rgb(66, 66, 66);
+    @media(max-width:$tablet){
+        width:100%;
+    }
 }
 
 .navbar .logo-menu{
-    width: 30%;
-    height: 75%;
+    width: 60%;
+    height: 60%;
     padding-top: 10px;
     padding-left: 20px;
-    padding-right: 20px;
+    padding-bottom: 10px;
 }
 
-.navbar .logo-menu .logo{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+// .navbar .logo-menu .logo{
+//     width: 100%;
+//     height: 100%;
+//     object-fit: cover;
+// }
 
 .navbar .options-menu{
-    height: 50%;
     width: 100%;
+    height: 30%;
     display: flex;
-    justify-content: space-between;
-    font-family: 'Athiti', sans-serif;
-    font-style: normal;
+    justify-content: center;
+    font-family:'Athiti', sans-serif;
     font-size: 15px;
     font-weight: bold;
-}
+    background-color: rgb(66, 66, 66);
+    padding-bottom: 10px;
+    @media(max-width: $tablet){
+        font-size: 10px;
+    }
+    }
 
 .navbar .options-menu .incio-button{
     background-color: rgb(255, 201, 51);
@@ -80,6 +91,11 @@
     justify-content: center;
     margin-right: 20px;
 }
+
+#cerrar-button{
+    height: fit-content;
+}
+
 .navbar .options-menu .about-button a{
     color: black;
     text-decoration: none;
