--- a/src/app/pages/perfil-gerente/vista-citas/vista-citas.component.scss
+++ b/src/app/pages/perfil-gerente/vista-citas/vista-citas.component.scss
@@ -1,40 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 @import "node_modules/font-awesome/scss/font-awesome.scss";
 
+
+$phone: 375px;
+$tablet: 758px;
+
 .wrapper{
+    display: block;
     height: 80%;
     width: 75%;
     background-color: rgb(66, 66, 66);
-    float: left;
+    justify-content: center;
+    // align-items: center;
+    @media(max-width:$tablet){
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .wrapper .title{
-    font-family: 'Athiti', sans-serif ;
-    font-size: 25px;
-    color: rgb(255, 201, 51);
+    position: relative;
+    // left: 20%;
+    top:5%;
+    height: 10%;
     display: flex;
     justify-content: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    font-family: 'Athiti', sans-serif;
+    font-size: 25px;
+    color: rgb(255, 201, 51);
+    @media(max-width: $tablet){
+        font-size: 20px;
+    }
 }
 
 .botones{
-    height: 0px;
+    width:50%;
+    height: 70%;
+    margin-left: 20%;
+
 }
 
 button{
     display: flex;
     justify-items: normal;
-    margin-top: 50px;
+    margin-top: 10%;
     align-items: center;
-    margin-left: 340px;
-    height: 50px;
+    // margin-left: 20%;
+    height: 10%;
     font-family: 'Athiti', sans-serif ;
     font-size: 25px;
     border: none;
-    width: 280px;
+    width: 90%;
     cursor: pointer;
-    text-align: center;
+    text-align: center;   
 }
 
 .title{
@@ -44,6 +62,16 @@ button{
 .btn{
     text-align: center;
     display: inline-block;
+    margin-left: 20%;
+    @media(max-width: $tablet){
+        font-size: 15px;
+        height: fit-content;
+    }
+    @media(max-width: $phone){
+        font-size: 10px;
+        height: fit-content;
+        border-top: 5%;
+    }
 }
 
 
