--- a/src/app/pages/perfil-gerente/vista-maneja-citas/vista-maneja-citas.component.scss
+++ b/src/app/pages/perfil-gerente/vista-maneja-citas/vista-maneja-citas.component.scss
@@ -1,11 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 
+$phone: 375px;
+$tablet: 758px;
 
+*{
+    background-color: rgb(66, 66, 66);;
+}
 .wrapper{
+    display: block;
     height: 80%;
     width: 75%;
     background-color: rgb(66, 66, 66);
-    float: left;
+    justify-content: center;
+    // align-items: center;
+    @media(max-width:$tablet){
+        width: 100%;
+        height: 100%;
+    }
 }
 
 *{
@@ -14,11 +25,22 @@
 }
 
 .calendario{
-    width: 800px;
+    width: 100%;
     margin-left: 90px;
-    margin-top: 40px;
+    margin-top: 0;
     height: 400px;
+    margin: 0;
+    padding: 0;
 }
+
+.fullcalendar{
+    position: relative;
+    left: 5%;
+    width: 90%;
+    margin: 0;
+    padding: 0;
+}
+
 
 
 
