--- a/src/app/pages/perfil-gerente/vista-reporte-cliente/vista-reporte-cliente.component.scss
+++ b/src/app/pages/perfil-gerente/vista-reporte-cliente/vista-reporte-cliente.component.scss
@@ -1,10 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 
+$phone: 375px;
+$tablet: 758px;
+
 .wrapper{
+    display: block;
     height: 80%;
     width: 75%;
     background-color: rgb(66, 66, 66);
-    float: left;
+    justify-content: center;
+    // align-items: center;
+    @media(max-width:$tablet){
+        width: 100%;
+        height: 100%;
+    }
 }
 
 select{
