--- a/src/app/pages/perfil-gerente/vista-reporte-extras/vista-reporte-extras.component.scss
+++ b/src/app/pages/perfil-gerente/vista-reporte-extras/vista-reporte-extras.component.scss
@@ -1,16 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 
 
+$phone: 375px;
+$tablet: 758px;
+
 .wrapper{
+    display: block;
     height: 80%;
     width: 75%;
     background-color: rgb(66, 66, 66);
-    float: left;
+    justify-content: center;
+    // align-items: center;
+    @media(max-width:$tablet){
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .botones{
     height: 30px;
-    margin-top: 30px;
+    margin-top: 0;
     margin-left: 50px;
 }
 
@@ -20,7 +29,8 @@
 }
 
 .grafico{
-    margin-left: 250px;
-    margin-top: 30px;
-    height: 20px;
+    width: 80%;
+    margin: 5%;
+    // margin-top: 30px;
+    // height: 20px;
 }
